parser/src/parser/snapshots/parser__parser__enums__tests__parse_empty_enum.snap
---
source: parser/src/parser/enums.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 11)
  ENUM_DEF@[0; 11)
    ENUM_KW@[0; 4) "enum"
    WHITESPACE@[4; 5) " "
    NAME@[5; 8)
      IDENT@[5; 8) "Foo"
    WHITESPACE@[8; 9) " "
    ENUM_VARIANT_LIST@[9; 11)
      L_CURLY@[9; 10) "{"
      R_CURLY@[10; 11) "}"

