parser/src/parser/snapshots/parser__parser__enums__tests__parse_enum_generic.snap
---
source: parser/src/parser/enums.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 32)
  ENUM_DEF@[0; 32)
    ENUM_KW@[0; 4) "enum"
    WHITESPACE@[4; 5) " "
    NAME@[5; 11)
      IDENT@[5; 11) "Result"
    TYPE_PARAM_LIST@[11; 16)
      L_ANGLE@[11; 12) "<"
      TYPE_PARAM@[12; 13)
        NAME@[12; 13)
          IDENT@[12; 13) "T"
      COMMA@[13; 14) ","
      TYPE_PARAM@[14; 15)
        NAME@[14; 15)
          IDENT@[14; 15) "E"
      R_ANGLE@[15; 16) ">"
    WHITESPACE@[16; 17) " "
    ENUM_VARIANT_LIST@[17; 32)
      L_CURLY@[17; 18) "{"
      WHITESPACE@[18; 19) " "
      ENUM_VARIANT@[19; 24)
        NAME@[19; 21)
          IDENT@[19; 21) "Ok"
        L_PAREN@[21; 22) "("
        IDENT_TYPE@[22; 23)
          IDENT@[22; 23) "T"
        R_PAREN@[23; 24) ")"
      COMMA@[24; 25) ","
      ENUM_VARIANT@[25; 31)
        NAME@[25; 28)
          IDENT@[25; 28) "Err"
        L_PAREN@[28; 29) "("
        IDENT_TYPE@[29; 30)
          IDENT@[29; 30) "E"
        R_PAREN@[30; 31) ")"
      R_CURLY@[31; 32) "}"

