parser/src/parser/snapshots/parser__parser__enums__tests__parse_enum_variants_trailing_comma.snap
---
source: parser/src/parser/enums.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 17)
  ENUM_DEF@[0; 17)
    ENUM_KW@[0; 4) "enum"
    WHITESPACE@[4; 5) " "
    NAME@[5; 8)
      IDENT@[5; 8) "Foo"
    WHITESPACE@[8; 9) " "
    ENUM_VARIANT_LIST@[9; 17)
      L_CURLY@[9; 10) "{"
      ENUM_VARIANT@[10; 11)
        NAME@[10; 11)
          IDENT@[10; 11) "A"
      COMMA@[11; 12) ","
      ENUM_VARIANT@[12; 13)
        NAME@[12; 13)
          IDENT@[12; 13) "B"
      COMMA@[13; 14) ","
      ENUM_VARIANT@[14; 15)
        NAME@[14; 15)
          IDENT@[14; 15) "C"
      COMMA@[15; 16) ","
      R_CURLY@[16; 17) "}"

