parser/src/parser/snapshots/parser__parser__enums__tests__parse_exported_enum.snap
---
source: parser/src/parser/enums.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 18)
  ENUM_DEF@[0; 18)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    ENUM_KW@[7; 11) "enum"
    WHITESPACE@[11; 12) " "
    NAME@[12; 15)
      IDENT@[12; 15) "Foo"
    WHITESPACE@[15; 16) " "
    ENUM_VARIANT_LIST@[16; 18)
      L_CURLY@[16; 17) "{"
      R_CURLY@[17; 18) "}"

